# Machina

./: .gitignore  CMakeLists.txt  LICENSE.txt  README
include/config/: project_config.hpp
include/input/: InputException.hpp  LineReader.hpp  MachinaExpression.hpp
include/input/grammaticalParser/: Grammar.hpp  Parser.hpp  Tree.hpp
include/input/reader/: FileReader.hpp  LineReader.hpp  ReaderException.hpp
include/input/syntacticParser/: SyntacticParserException.hpp
include/machinaObject/menu/: Menu.hpp  MenuManager.hpp
include/util/: logger.hpp
resources/machina/: test.mach
src/: app_test.cpp
src/config/: project_config.hpp
src/input/: FileReader.cpp  LineReader.cpp
src/input/grammaticalParser/: Parser.cpp  Tree.cpp
src/input/reader/: FileReader.cpp  LineReader.cpp
src/loader/fileReader/: FileReader.cpp  FileReader.hpp
src/loader/generator/: Generator.cpp  Generator.hpp
src/loader/grammar/: Grammar.cpp
src/loader/grammaticalParser/: GrammaticalParser.cpp  GrammaticalParser.hpp  Parser.cpp  Parser.hpp
src/loader/syntacticParser/: SyntacticParser.cpp  SyntacticParser.hpp
src/loader/uniDefinition/buttonFactory/: ButtonFactory.cpp  ButtonFactory.hpp
src/machinaObject/button/: Button.cpp  Button.hpp
src/machinaObject/main/: Main.cpp  Main.hpp
src/machinaObject/menu/: Menu.cpp
src/machinaObject/menuManager/: MenuManager.cpp
src/shared/common/tree/: Tree.cpp  Tree.hpp
src/shared/exception/: GrammaticalParserException.hpp  ReaderException.hpp
src/shared/util/: MachinaExpression.hpp  logger.hpp  vector_util.hpp
src/test/: app_test.cpp
src/util/: stream_op.cpp
